# Meta-zebrafish

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_REPORT.md  PROJECT_REPORT_PPT.pptx  README.md  command.md  vtk_to_softcon_mesh.py
args/: run_humanoid3d_walk_args.txt  run_worm_swim_args.txt  train_worm_swim_args.txt
cmake_module/: FindBoost.cmake  FindTinyXML.cmake
data/: drawmuscles.txt  fish.sampling  fish_body_head_u033.mesh  fish_body_tail_extended.mesh  fish_body_unlabeled.mesh  fish_pca_topview.html  fish_tail_extended.sampling  worm_empty_key.csv  worm_givenkey1.csv  worm_givenkey2.csv  worm_givenkey_t0_fast.csv  worm_givenkey_tn_fast.csv  worm_givenkey_turn.csv  worm_givenkey_turn2.csv  worm_mesh_4.mesh  worm_mesh_4_test.mesh  worm_nerve_cord.muscle
data/muscle/: worm_muscles_300_220428-144704.json  worm_muscles_300_220428-152601.json  worm_muscles_300_220428-152632.json  worm_muscles_300_220428-155332.json  worm_muscles_300_220428-155610.json
data/output/: Muscle_Signal.csv  Muscle_Signal1.csv  vis_signal.py
data/output/tmp/: worm_fast_t0_actions_300.json  worm_fast_t0_states_300.json
interact/: CMakeLists.txt  WormInEnv.py  interact.cpp  interact.h
interact/neural_model/: config_all.json
interact/neural_model/components/model/: AIAL.hoc  AIAR.hoc  AIBL.hoc  AIBR.hoc  AIYL.hoc  AIYR.hoc  AIZL.hoc  AIZR.hoc  AVAL.hoc  AVAR.hoc  AVBL.hoc  AVBR.hoc  AVEL.hoc  AVER.hoc  AWAL.hoc  AWAR.hoc  AWCL.hoc  AWCR.hoc  DA01.hoc  DA02.hoc  DA03.hoc  DA04.hoc  DA05.hoc  DA06.hoc  DA07.hoc  DA08.hoc  DA09.hoc  DB01.hoc  DB02.hoc  DB03.hoc  DB04.hoc  DB05.hoc  DB06.hoc  DB07.hoc  DD01.hoc  DD02.hoc  DD03.hoc  DD04.hoc  DD05.hoc  DD06.hoc  (+67 more)
interact/neural_model/network/: Cell.py  Connection.py  Network.py  Segment.py  export.py  init.py  input.py  run.py  run_test_syn.py  run_training_set.py  simulate.py
interact/neural_model/network/network_assemble/: trans.py
interact/neural_model/utils/: _channel_param.txt  _volume.txt  args.py  distance.py  excelfunc.py  jsonfunc.py
interact/neural_model/wang_sim/: cnn.py  interact_with_env.py
interact/neural_model/wang_sim/data/: eworm.muscle-220428-152601.txt  eworm.muscle.gt-220428-152601.txt  eworm.muscle.gt.txt  eworm.muscle.txt  eworm.muscle2.txt  eworm.muscle3.txt  eworm_soma.muscle.txt  group2_eworm.muscle-220428-152601.txt
render/: CMakeLists.txt  Camera.cpp  Camera.h  DrawFunctions.cpp  DrawFunctions.h  DrawPrimitives.cpp  DrawPrimitives.h  FluidParticleVisualizer.cpp  FluidParticleVisualizer.h  GLWindow.cpp  GLWindow.h  SimulationWindow.cpp  SimulationWindow.h  lodepng.cpp  lodepng.h  main.cpp
result/debug_480_no_hydro_force/: t0.50_meta.txt  t0.50_positions.csv
result/debug_480_projection_static_1p5s/: displacement_summary.txt  t1.00_positions.csv  t1.50_forces.csv
result/debug_480_projection_static_1s/: displacement_summary.txt  metrics.txt  t0.50_forces.csv  t0.50_meta.txt  t0.50_positions.csv  t1.00_forces.csv  t1.00_meta.txt  t1.00_positions.csv  torque_summary.csv
result/debug_fsi_480_retry/: displacement_summary.txt
result/debug_fsi_noredirect_retry2/: displacement_summary.txt  torque_summary.csv
result/debug_fsi_redirect_after_filter_guard/: displacement_summary.txt  metrics.txt
result/debug_fsi_redirect_retry/: surface_faces.csv
result/flow_sweep_480hz_1p5s/flow_0/run_1/: displacement_summary.txt
result/flow_sweep_480hz_1p5s_projection/: snapshot_coverage.csv  summary.csv  summary.md
result/flow_sweep_480hz_1p5s_projection/analysis_figures/: analysis_report.md  analysis_report_cn.md  augmented_metrics.csv
result/flow_sweep_480hz_1p5s_projection/flow_0/run_1/: metrics.txt  t0.50_forces.csv  t0.50_meta.txt  t0.50_positions.csv  t1.00_forces.csv  t1.00_meta.txt  t1.50_meta.txt  t1.50_positions.csv  torque_summary.csv
result/flow_sweep_480hz_1p5s_projection/flow_0/run_2/: displacement_summary.txt  metrics.txt  t0.50_forces.csv  t0.50_meta.txt  t0.50_positions.csv  t1.00_forces.csv  t1.00_meta.txt  t1.00_positions.csv  t1.50_forces.csv  t1.50_meta.txt  t1.50_positions.csv  torque_summary.csv
result/flow_sweep_480hz_1p5s_projection/flow_0/run_3/: displacement_summary.txt  metrics.txt  t0.50_forces.csv  t0.50_meta.txt  t1.00_meta.txt  (+7 more)
result/flow_sweep_480hz_1p5s_valid/: summary.md
scripts/: analyze_flow_sweep_results.py  analyze_fsi_force_distribution.py  plot_fig10_body_pressure_cycle.py  plot_surface_pressure_views.py  plot_unbiased_disp_hist.py  run_fsi_sweep.sh  sweep_ghost_coupling.py  visualize_fsi_snapshots.py  visualize_fsi_spatial.py
sim/: CMakeLists.txt  Environment.cpp  Environment.h  KeyWorm.cpp  KeyWorm.h  Muscle.cpp  Muscle.h  MuscleSegment.cpp  MuscleSegment.h  Normalizer.cpp  Normalizer.h  Worm.cpp  Worm.h  force_check.test.cpp  force_disp_test.cpp  fsi_force_snapshot.test.cpp  fsi_stability.test.cpp  fsi_unbiased_disp.test.cpp  headless_test.test.cpp  hydro_30frame.test.cpp  sweep_hydro.sh  test_peridyno_bridge  test_peridyno_bridge.test.cpp  tune_fsi.py  vap_particle_trace.test.cpp
sim/fem/: CMakeLists.txt  World.cpp  World.h  WorldGPU.cu  WorldGPU.h
sim/fem/Constraint/: AttachmentConstraint.cpp  AttachmentConstraint.h  Constraint.cpp  Constraint.h  ConstraintGPU.cu  ConstraintGPU.h  ConstraintHeader.h  CorotateFEMConstraint.cpp  CorotateFEMConstraint.h  LinearMuscleConstraint.cpp  LinearMuscleConstraint.h  Tensor.cpp  Tensor.h  TriangleBendingConstraint.cpp  TriangleBendingConstraint.h  TriangleMuscleConstraint.cpp  TriangleMuscleConstraint.h  TriangleStrainConstraint.cpp  TriangleStrainConstraint.h
sim/fem/Mesh/: MeditMesh.cpp  MeditMesh.h  Mesh.cpp  Mesh.h  MeshHeaders.h  OBJMesh.cpp  OBJMesh.h
sim/fluid/: PeridynoBridge.cu  PeridynoBridge.h  VapHydro.inl
sim/util/: Annealer.cpp  Annealer.h  ArgParser.cpp  ArgParser.h  CircularBuffer.h  DynamicTimeWarper.cpp  DynamicTimeWarper.h  FileUtil.cpp  FileUtil.h  IndexBuffer.h  IndexManager.cpp  IndexManager.h  JsonUtil.cpp  JsonUtil.h  MathUtil.cpp  MathUtil.h  Rand.cpp  Timer.cpp  Timer.h  Trajectory.h
tools/: fish_pca_topview.py  generate_report_ppt.py  label_fish_head_u33.py  plot_fsi_pressure_snapshots.py
(+236 files in other folders)
